- all webmail now share the same get_name and get_domain functions
- fixed stupid fetchmail top bug
- log used to write liberopopsd :)
- fixed "-" in the username
- proxy AUTH issue workaround (not able to make CURLAUTH_ANY work)
28/05/2004 0.0.3 bomb! feature release
- updated the doc
- fixed libero webmail to new mlex and new libero webmail (nobody
noticed it has changed so much? probably because the old mlex continued
to work properly, but it was a lucky case!)
- added tin webmail
- improved mlex.c with <script> correct handling
- fixed http redirection 
- fixed browser cookie generation
19/05/2004 0.0.2 feature release [never released]
- added browser:get_head(url,extraheader) method
- fixed Makefile verbosity
- fixed chroot jail for curl
- fixed aggregator.lua (thanks to bimbosuper)
- added games.gamespot.com and news.gamespot.com aggregator domains
- updated the website with FAQ section
- documentation for curl_lua and psock
- moved popforward from luasocket to psock (poor but works)
- added portablesocket_lua module
- updated libero.lua to new browser.lua
- updated serialize.lua to support "self serializing" objects
- updates support.lua to support new browser.lua
- updated browser.lua do cURL
- moved to cURL
- added curl_lua module
01/05/2004 0.0.1 first public release